syntax = "proto3";
package proto;

import "Block.proto";

message Edge
{
    bytes source_uuid = 1;
    bytes target_uuid = 2;
    oneof label {
      bool boolean = 3;
      uint64 integer = 4;
    }
}

message CFG
{
    repeated Block blocks = 1;
    repeated Edge edges = 2;
}
